# libmemtrim

./: Makefile.am  configure.ac  install_mtrim.sh  libmtrim.c
